# screenload-qt

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  screenload.example.ini  snapcraft.yaml
cmake/modules/: MacOSXBundleInfo.plist.in
data/: files.qrc  flameshot.rc  graphics.qrc  screenload.rc
data/appdata/: ru.screenload.ScreenLoad.metainfo.xml
data/dbus/: ru.screenload.ScreenLoad.service.in  ru.screenload.ScreenLoad.xml
data/desktopEntry/package/: ru.screenload.ScreenLoad.desktop
data/files/: AuthorizationDenied.html  SuccessfulAuthorization.html  main.css
data/man/man1/: screenload.1
data/shell-completion/: screenload.fish  screenload.zsh
data/snap/: snapcraft.yaml
data/translations/: Internationalization_bg.ts  Internationalization_ca.ts  Internationalization_cs.ts  Internationalization_da.ts  Internationalization_de_DE.ts  Internationalization_el.ts  Internationalization_es.ts  Internationalization_eu.ts  Internationalization_fa.ts  Internationalization_fi.ts  Internationalization_fr.ts  Internationalization_gl.ts  Internationalization_grc.ts  Internationalization_he.ts  Internationalization_hu.ts  Internationalization_id.ts  Internationalization_it_IT.ts  Internationalization_ja.ts  Internationalization_ka.ts  Internationalization_ko.ts  Internationalization_nb_NO.ts  Internationalization_nl.ts  Internationalization_nl_NL.ts  Internationalization_pl.ts  Internationalization_pt_BR.ts  Internationalization_ru.ts  Internationalization_sk.ts  Internationalization_sr_SP.ts  Internationalization_sv_SE.ts  Internationalization_tr.ts  Internationalization_uk.ts  Internationalization_vi.ts  Internationalization_zh_CN.ts  Internationalization_zh_HK.ts  Internationalization_zh_TW.ts
docs/: CONTRIBUTING.md  RFC.md  ReleaseNotes_0.9.md  ReleaseNotes_11.0.md  ReleaseNotes_12.0.md  Releasing.md  Sway and wlroots support.md
docs/RFC/: 0000-Add-Opacity-slider.md
docs/shortcuts-config/: screenload-shortcuts-kde.khotkeys
packaging/: Build-MacOS-Signed._sh  Build-MacOS._sh  Sign-MacOS._sh  SignApp._sh  chmod.sh
packaging/deb-simple/screenload/DEBIAN/: control  md5sums
packaging/deb-simple/screenload/usr/share/bash-completion/completions/: screenload
packaging/deb-simple/screenload/usr/share/doc/screenload/: copyright
packaging/deb/screenload/DEBIAN/: control
packaging/deb/screenload/usr/share/applications/: ru.screenload.ScreenLoad.desktop
packaging/deb/screenload/usr/share/dbus-1/services/: ru.screenload.ScreenLoad.service
packaging/deb/screenload/usr/share/metainfo/: ru.screenload.ScreenLoad.metainfo.xml
packaging/deb/screenload/usr/share/zsh/site-functions/: _screenload
packaging/debian/: changelog  control  copyright
packaging/flatpak/: ru.screenload.ScreenLoad.yml
packaging/macos/: Info.plist  screenload.icns  update_package.sh
packaging/rpm/: screenload.spec
src/: CMakeLists.txt  main.cpp
src/cli/: CMakeLists.txt  commandlineparser.cpp
src/config/: CMakeLists.txt  cacheutils.h  configresolver.cpp  configwindow.cpp  generalconf.cpp  generalconf.h  setshortcutwidget.cpp  styleoverride.h
src/core/: CMakeLists.txt  flameshot.cpp  flameshotdaemon.cpp  globalshortcutfilter.cpp  qguiappcurrentscreen.h  screenload.cpp  screenload.h  screenloaddaemon.cpp  screenloaddaemon.h  screenloaddbusadapter.cpp  screenloaddbusadapter.h
src/tools/: CMakeLists.txt  capturecontext.cpp  capturetool.h
src/tools/arrow/: arrowtool.cpp
src/tools/circle/: circletool.cpp
src/tools/circlecount/: circlecounttool.cpp
src/tools/copy/: copytool.cpp
src/tools/exit/: exittool.cpp
src/tools/imgupload/: imguploadermanager.cpp  imguploadermanager.h  imguploadertool.cpp
src/tools/imgupload/storages/: imguploaderbase.cpp  imguploaderbase.h
src/tools/imgupload/storages/dwnldr/: dwnldrauthhttpserver.cpp  dwnldrauthhttpserver.h  dwnldruploader.cpp  dwnldruploader.h  httpserver.cpp  httpserver.h
src/tools/imgupload/storages/imgur/: imguruploader.cpp  imguruploader.h
src/tools/line/: linetool.cpp
src/tools/marker/: markertool.cpp
src/tools/pencil/: penciltool.cpp
src/tools/pixelate/: pixelatetool.cpp
src/tools/save/: savetool.cpp
src/tools/selection/: selectiontool.cpp
src/tools/sizedecrease/: sizedecreasetool.cpp  sizedecreasetool.h
src/tools/sizeincrease/: sizeincreasetool.cpp  sizeincreasetool.h
src/tools/text/: texttool.cpp
src/tools/undo/: undotool.cpp
src/utils/: CMakeLists.txt  abstractlogger.cpp  confighandler.cpp  confighandler.h  globalvalues.cpp  history.cpp  pathinfo.cpp  pathinfo.h  screengrabber.cpp  screenshotsaver.cpp  systemnotification.cpp  valuehandler.cpp
src/widgets/: CMakeLists.txt  capturelauncher.cpp  infowindow.cpp  infowindow.ui  loadspinner.cpp  trayicon.cpp  updatenotificationwidget.cpp  updatenotificationwidget.h  uploadhistory.cpp  uploadhistory.ui  uploadlineitem.cpp
src/widgets/capture/: CMakeLists.txt  capturebutton.cpp  capturebutton.h  capturetoolbutton.cpp  capturetoolbutton.h  capturetoolobjects.h  capturewidget.cpp  modificationcommand.h
src/widgets/panel/: CMakeLists.txt
tests/: action_options.sh  path_option.sh
